--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
     
     <footer>
-            <p><span>&copy;</span>Gerico David 2019. All rights reserved.</p>
+            <p>&copy;Gerico David 2019. All rights reserved.</p>
     </footer>
 </body>
 </html>
